--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
     }
     agent {
       node {
-        // TODO: run this simple pipeline on jenkins 'master' node
+        label 'master'
       }
     }
 
@@ -24,9 +24,20 @@ pipeline {
         }
 
         // TODO: ADD A STAGE THAT SAYS HELLO
+        stage('stage 2') {
+         step {
+           sh 'echo hello from stage 2!'
+         }        
+        }
 
         // TODO: ADD AN APPROVAL STAGE
-
+        stage('manual approval') {
+          step {
+            timeout(time: 60, unit: 'MINUTES') {
+              input message: "Move to stage 3?"
+            }
+          }
+        }
         stage('stage 3') {
             steps {
                 sh 'echo hello from stage 3!. This is the last stage...'
