--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
 
         // TODO: ADD AN APPROVAL STAGE
         stage('manual approval') {
-          step {
+          steps {
             timeout(time: 60, unit: 'MINUTES') {
               input message: "Move to stage 3?"
             }
