--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
 
         
         stage('stage 2') {
-         step {
+         steps {
            sh 'echo hello from stage 2!'
          }        
         }
